eks-ecr/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: res
  name: mern-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: res
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: res
    spec:
      containers:
      - image: 117241568820.dkr.ecr.us-east-1.amazonaws.com/mernapp-ecr:frontend
        name: frontend
        ports:
          - containerPort: 3000
      imagePullSecrets:
        - name: regcred
