eks-ecr/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: res
  name: frontend
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 30003
  selector:
    app: res
  type: NodePort
status:
  loadBalancer: {}
